--- a/angularapp/src/app/delete-dialog/delete-dialog.component.html
+++ b/angularapp/src/app/delete-dialog/delete-dialog.component.html
@@ -1,6 +1,6 @@
-<h1 mat-dialog-title>Delete {{itemToDelete}}</h1>
+<h1 mat-dialog-title>{{title}}</h1>
 <div mat-dialog-content>
-    Are you sure you want to delete this {{itemToDelete}}?
+    {{content}}
 </div>
 <div mat-dialog-actions>
     <button mat-button mat-dialog-close cdkFocusInitial>Cancel</button>
