--- a/angularapp/src/app/new-post/new-post.component.css
+++ b/angularapp/src/app/new-post/new-post.component.css
@@ -1,4 +1,4 @@
-.title, .post {
+.full-width {
 	display: block;
 	width: 100%;
 }
@@ -51,3 +51,37 @@ mat-card-actions {
 	height: 100% !important;
 	background: #1e1e1e;
 }
+
+.sections {
+	gap: 5px;
+}
+
+.section {
+	align-items: center;
+	display: flex;
+	box-sizing: border-box;
+	border-radius: 10px;
+	width: 100%;
+	padding: 5px;
+	margin-bottom: 10px;
+	background: #24263c;
+}
+
+.sections.cdk-drop-list-dragging .section:not(.cdk-drag-placeholder) {
+	transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.cdk-drag-preview {
+	box-sizing: border-box;
+	border-radius: 4px;
+	box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+	opacity: 0;
+}
+
+.cdk-drag-animating {
+	transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
