--- a/angularapp/src/app/post/post.component.css
+++ b/angularapp/src/app/post/post.component.css
@@ -77,3 +77,16 @@ mat-card-content, mat-card-title {
 	height: 100% !important;
 	background: #1e1e1e;
 }
+
+.guide-content h1 {
+	font-size: x-large;
+	font-weight: normal;
+}
+
+.divider {
+	width: 100%;
+	height: 1px;
+	background-color: #ffd600;
+	box-shadow: 0px 0px 4px #ffae00;
+	margin-top: 10px;
+}
