Added post and comment history, delete account, changed comment id to guid

--- a/angularapp/src/app/app.component.css
+++ b/angularapp/src/app/app.component.css
@@ -28,7 +28,12 @@ footer {
 }
 
 ::ng-deep .mat-mdc-card,
-::ng-deep .mat-expansion-panel,
-::ng-deep .mdc-snackbar__surface {
+::ng-deep .mat-mdc-button,
+::ng-deep .mdc-snackbar__surface,
+::ng-deep .mdc-dialog__surface {
 	border-radius: 10px !important;
+}
+
+::ng-deep .mdc-dialog__surface {
+	background-color: #2d304b !important;
 }
