--- a/angularapp/src/app/profile/profile.component.html
+++ b/angularapp/src/app/profile/profile.component.html
@@ -55,11 +55,16 @@
             </mat-card>
         </ng-template>
     </div>
-    
-    <button class="full-width" mat-flat-button (click)="startPasswordChange()"
-            *ngIf="!isChangingPassword; else passwordChange;">
-        Change Password
-    </button>
+
+    <div style="display: flex; margin-top: 10px; gap: 5px;" *ngIf="!isChangingPassword; else passwordChange;">
+        <button style="flex-grow: 1;" mat-flat-button (click)="startPasswordChange()"
+                *ngIf="!isChangingPassword; else passwordChange;">
+            Change Password
+        </button>
+        <button mat-flat-button style="width: 150px; color: red; border: 1px solid red;" (click)="openDeleteAccountDialog()">
+            Delete Account
+        </button>
+    </div>
     <ng-template #passwordChange>
         <mat-card class="password-change">
             <form>
@@ -94,11 +99,99 @@
                     <button type="button" (click)="cancelPasswordChange()" mat-stroked-button>Cancel</button>
                     <button type="submit" [disabled]="!oldPasswordFormControl.valid || !newPasswordFormControl.valid || !confirmNewPasswordFormControl.valid"
                             (click)="savePasswordChanges()" mat-stroked-button>
-                    Save Changes</button>
+                        Save Changes
+                    </button>
                 </mat-card-actions>
             </form>
         </mat-card>
     </ng-template>
 
-    
+    <div class="divider"></div>
+    <div>
+        <mat-accordion>
+            <mat-expansion-panel>
+                <mat-expansion-panel-header>
+                    <mat-panel-title>View post history</mat-panel-title>
+                </mat-expansion-panel-header>
+                <div>
+                    <table mat-table [dataSource]="postDataSource">
+
+                        <ng-container matColumnDef="title">
+                            <th mat-header-cell *matHeaderCellDef> Post </th>
+                            <td mat-cell *matCellDef="let element" title="{{element.title}}"> {{element.title}} </td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="commentCount">
+                            <th mat-header-cell *matHeaderCellDef> Comments </th>
+                            <td mat-cell *matCellDef="let element" title="{{element.commentCount}}"> {{element.commentCount}} </td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="voteCount">
+                            <th mat-header-cell *matHeaderCellDef> Votes </th>
+                            <td mat-cell *matCellDef="let element" title="{{element.voteCount}}"> {{element.voteCount}} </td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="createdOn">
+                            <th mat-header-cell *matHeaderCellDef> Created on </th>
+                            <td class="date-row" mat-cell *matCellDef="let element"
+                                title="{{element.createdOn.toLocaleDateString() + ' ' + element.createdOn.toLocaleTimeString()}}">
+                                <div class="time-passed-date">{{dateHelperService.getTimePassedString(element.createdOn, currentTime)}}</div>
+                                <div class="full-date">{{element.createdOn.toLocaleDateString() + ' ' + element.createdOn.toLocaleTimeString()}}</div>
+                            </td>
+                        </ng-container>
+
+                        <tr mat-header-row *matHeaderRowDef="displayedPostHistoryColumns"></tr>
+                        <tr mat-row
+                            [routerLink]="['/post/' + row.id]"
+                            *matRowDef="let row; columns: displayedPostHistoryColumns;"></tr>
+                    </table>
+                    <mat-paginator #postPaginator
+                                   [pageSizeOptions]="[5, 10, 20]"
+                                   showFirstLastButtons>
+                    </mat-paginator>
+                </div>
+            </mat-expansion-panel>
+            <mat-expansion-panel>
+                <mat-expansion-panel-header>
+                    <mat-panel-title>View comment history</mat-panel-title>
+                </mat-expansion-panel-header>
+                <div>
+                    <table mat-table [dataSource]="commentDataSource">
+                        <ng-container matColumnDef="postTitle">
+                            <th mat-header-cell *matHeaderCellDef> Post </th>
+                            <td mat-cell *matCellDef="let element" title="{{element.postTitle}}"> {{element.postTitle}} </td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="commentContent">
+                            <th mat-header-cell *matHeaderCellDef> Comment </th>
+                            <td mat-cell *matCellDef="let element" title="{{element.commentContent}}"> {{element.commentContent}} </td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="voteCount">
+                            <th mat-header-cell *matHeaderCellDef> Votes </th>
+                            <td mat-cell *matCellDef="let element" title="{{element.voteCount}}"> {{element.voteCount}} </td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="createdOn">
+                            <th mat-header-cell *matHeaderCellDef> Created on </th>
+                            <td class="date-row" mat-cell *matCellDef="let element"
+                                title="{{element.createdOn.toLocaleDateString() + ' ' + element.createdOn.toLocaleTimeString()}}">
+                                <div class="time-passed-date">{{dateHelperService.getTimePassedString(element.createdOn, currentTime)}}</div>
+                                <div class="full-date">{{element.createdOn.toLocaleDateString() + ' ' + element.createdOn.toLocaleTimeString()}}</div>
+                            </td>
+                        </ng-container>
+
+                        <tr mat-header-row *matHeaderRowDef="displayedCommentHistoryColumns"></tr>
+                        <tr mat-row
+                            [routerLink]="['/post/' + row.postId]"
+                            *matRowDef="let row; columns: displayedCommentHistoryColumns;"></tr>
+                    </table>
+                    <mat-paginator #commentPaginator
+                                   [pageSizeOptions]="[5, 10, 20]"
+                                   showFirstLastButtons>
+                    </mat-paginator>
+                </div>
+            </mat-expansion-panel>
+        </mat-accordion>
+    </div>
 </div>
