--- a/angularapp/src/app/confirm-reset-password-dialog/confirm-reset-password-dialog.component.html
+++ b/angularapp/src/app/confirm-reset-password-dialog/confirm-reset-password-dialog.component.html
@@ -5,7 +5,7 @@
     </div>
     <div mat-dialog-content *ngIf="isPasswordReset()">
         New password:
-        <div style="color: white;">{{newPassword}}</div>
+        <div style="color: var(--bright-text);">{{newPassword}}</div>
     </div>
     <div mat-dialog-actions>
         <button mat-button mat-dialog-close cdkFocusInitial>Cancel</button>
