--- a/angularapp/src/app/control-panel/control-panel.component.css
+++ b/angularapp/src/app/control-panel/control-panel.component.css
@@ -55,7 +55,7 @@ td {
 }
 
 .clickable-row:hover {
-	background-color: #3d4059;
+	background-color: var(--table-hover-color);
 	cursor: pointer;
 }
 
