--- a/angularapp/src/app/posts/posts.component.html
+++ b/angularapp/src/app/posts/posts.component.html
@@ -75,7 +75,7 @@
         <mat-card-content *ngIf="postTypeFormControl.value == 'discussion' || postTypeFormControl.value == 'guide'">{{post.content}}</mat-card-content>
         <mat-card-content appClickStopPropagation style="cursor: default" *ngIf="postTypeFormControl.value == 'snippet'">
             <mat-icon (click)="openCopySnackBar()" [cdkCopyToClipboard]="post.content" style="position: absolute; float: right; z-index: 10; margin: 10px; cursor: pointer">content_copy</mat-icon>
-            <ngx-monaco-editor class="editor" [options]="{ theme: 'vs-dark', language: post.programmingLanguage, readOnly: true, automaticLayout: true }" [(ngModel)]="post.content"></ngx-monaco-editor>
+            <ngx-monaco-editor class="editor" [options]="{ theme: editorTheme, language: post.programmingLanguage, readOnly: true, automaticLayout: true }" [(ngModel)]="post.content"></ngx-monaco-editor>
             <span style="position: absolute;margin-top: -25px;margin-left: 5px;color: #8b8b8b">{{post.programmingLanguage}}</span>
         </mat-card-content>
         <mat-card-actions>
