--- a/angularapp/src/app/control-panel/control-panel.component.html
+++ b/angularapp/src/app/control-panel/control-panel.component.html
@@ -1,4 +1,18 @@
 <h1>Control Panel</h1>
+<div id="info-pane">
+    <mat-card>
+        <h1>Total posts</h1>
+        <span>3</span>
+    </mat-card>
+    <mat-card>
+        <h1>Total users</h1>
+        <span>32</span>
+    </mat-card>
+    <mat-card>
+        <h1>Total comments</h1>
+        <span>172</span>
+    </mat-card>
+</div>
 <mat-accordion>
     <mat-expansion-panel>
         <mat-expansion-panel-header>
