Fixed missing light theme

--- a/angularapp/src/app/new-post/new-post.component.html
+++ b/angularapp/src/app/new-post/new-post.component.html
@@ -132,7 +132,7 @@
                         </div>
                     </div>
                 </div>
-                <button type="button" style="width: 100%; --mdc-filled-button-container-color: #24263c;" mat-flat-button (click)="addNewSection();" [disabled]="editedSectionIndex !== undefined">Add new section</button>
+                <button type="button" style="width: 100%; --mdc-filled-button-container-color: var(--guide-editor-section-background);" mat-flat-button (click)="addNewSection();" [disabled]="editedSectionIndex !== undefined">Add new section</button>
             </div>
         </form>
     </mat-card-content>
