--- a/angularapp/src/app/new-post/new-post.component.css
+++ b/angularapp/src/app/new-post/new-post.component.css
@@ -43,13 +43,13 @@ mat-card-actions {
 
 .editor {
 	border-radius: 10px;
-	border: 10px solid #1e1e1e;
+	border: 10px solid var(--code-editor-background);
 	height: 50vh;
 }
 
 ::ng-deep .editor-container {
 	height: 100% !important;
-	background: #1e1e1e;
+	background: var(--code-editor-background);
 }
 
 .sections {
@@ -64,7 +64,7 @@ mat-card-actions {
 	width: 100%;
 	padding: 5px;
 	margin-bottom: 10px;
-	background: #24263c;
+	background: var(--guide-editor-section-background);
 }
 
 .sections.cdk-drop-list-dragging .section:not(.cdk-drag-placeholder) {
